// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoComplete SNAPSHOTS basic usage 1`] = `
<div>
  <div
    class="autocomplete-wrapper"
  >
    <div
      class="autocomplete-input-wrapper"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="autocomplete-input"
        value="value"
      />
    </div>
  </div>
</div>
`;

exports[`AutoComplete SNAPSHOTS should render different component states loading 1`] = `
<div>
  <div
    class="autocomplete-wrapper"
  >
    <div
      class="autocomplete-input-wrapper"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="autocomplete-input"
        value="value"
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <div
        class="loader-wrapper"
      >
        <div
          class="loader-container"
        >
          <span
            class="loader-element"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AutoComplete SNAPSHOTS should render different component states opened 1`] = `
<div>
  <div
    class="autocomplete-wrapper"
  >
    <div
      class="autocomplete-input-wrapper"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="autocomplete-input"
        value="value"
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          value0
        </li>
        <li
          class="suggestion-item"
        >
          value1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`AutoComplete SNAPSHOTS should render different component states readonly 1`] = `
<div>
  <div
    class="autocomplete-wrapper"
  >
    <div
      class="autocomplete-input-wrapper"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="autocomplete-input"
        readonly=""
        value="value"
      />
    </div>
  </div>
</div>
`;

exports[`AutoComplete SNAPSHOTS should render multi-type attributes data 1`] = `
<div>
  <div
    class="autocomplete-wrapper"
  >
    <div
      class="autocomplete-input-wrapper"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="autocomplete-input"
        value="value"
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          value0
        </li>
        <li
          class="suggestion-item"
        >
          value1
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`AutoComplete SNAPSHOTS should render multi-type attributes data 2`] = `
<div>
  <div
    class="autocomplete-wrapper"
  >
    <div
      class="autocomplete-input-wrapper"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="autocomplete-input"
        value="value0"
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          value0
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`AutoComplete SNAPSHOTS should render validation required validation 1`] = `
<div>
  <div
    class="autocomplete-wrapper"
  >
    <div
      class="autocomplete-input-wrapper danger required"
    >
      <input
        aria-invalid="true"
        aria-required="true"
        autocomplete="off"
        class="autocomplete-input"
        form="form"
        name="name"
        value=""
      />
    </div>
    <span
      class="invalid-message-list"
    >
      <span
        class="invalid-message-item"
      >
        message
      </span>
    </span>
  </div>
</div>
`;

exports[`AutoComplete SNAPSHOTS should render validation validation 1`] = `
<div>
  <div
    class="autocomplete-wrapper"
  >
    <div
      class="autocomplete-input-wrapper danger"
    >
      <input
        aria-invalid="true"
        autocomplete="off"
        class="autocomplete-input"
        form="form"
        name="name"
        value="value"
      />
    </div>
    <span
      class="invalid-message-list"
    >
      <span
        class="invalid-message-item"
      >
        message
      </span>
    </span>
  </div>
</div>
`;

exports[`AutoComplete SNAPSHOTS value in controllable mode 1`] = `
<div>
  <div
    class="autocomplete-wrapper"
  >
    <div
      class="autocomplete-input-wrapper"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="autocomplete-input"
        value="value"
      />
    </div>
  </div>
</div>
`;
